--- a/registration.html
+++ b/registration.html
@@ -7,6 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/reg-styles.css">
+    <script src="https://kit.fontawesome.com/e223accf0a.js" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.rawgit.com/RobinHerbots/Inputmask/4.x/dist/jquery.inputmask.bundle.js"></script>
 </head>
 <body>
 <header class="py-2">
@@ -42,24 +46,44 @@
 <div class="registration">
     <img src="/images/img1.jpg" alt="registration image">
     <h1>Реєстрація</h1>
-    <form>
+    <form method="post">
+        <script src="js/validateForm.js"></script>
+        <script src="/js/validateForm.js"></script>
         <label for="firstName">Ім’я:</label>
-        <input type="text" id="firstName" name="firstName" required>
+        <input type="text" id="firstName" name="firstName" required oninput="checkFirstName()">
+        <div id="firstName_error" class="invalid"></div>
         <br>
         <label for="lastName">Прізвище:</label>
-        <input type="text" id="lastName" name="lastName" required>
+        <input type="text" id="lastName" name="lastName" required oninput="checkLastName()">
+        <div id="lastName_error" class="invalid"></div>
         <br>
         <label for="middleName">По батькові:</label>
-        <input type="text" id="middleName" name="middleName" required>
+        <input type="text" id="middleName" name="middleName" required oninput="checkMiddleName()">
+        <div id="middleName_error" class="invalid"></div>
         <br>
+        <div class="radio">
+            <label>Гендер:</label>
+            <input type="radio" id="male" name="gender" value="male">
+            <label for="male">Чоловік</label>
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">Жінка</label>
+        </div>
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" required oninput="checkEmail()">
+        <div id="email_error" class="invalid"></div>
         <br>
         <label for="password">Пароль:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" required oninput="checkPassword()">
+        <div id="password_error" class="invalid"></div>
+        <button class="btn_pas" type="button" onclick="togglePasswordVisibility()">
+            <i class="fas fa-eye"></i> Показати пароль
+        </button>
         <br>
+        <label for="phone">Телефон</label>
+        <input type="tel" name="telephone" id="phone" placeholder="Телефон" required>
         <label for="date">Дата народження:</label>
-        <input type="date" id="date" name="date" required>
+        <input type="date" id="date" name="date" required oninput="checkDate()">
+        <div id="date_error" class="invalid"></div>
         <br>
         <label for="group">Група:</label>
         <select id="group" name="group">
@@ -71,9 +95,32 @@
         <label for="file">Завантажити файл:</label>
         <input class="input-file-btn" type="file" id="file" name="file">
         <br>
-        <button class="sub-btn" type="submit">Відправити</button>
+        <button class="sub-btn" type="button" onclick="registerUser()">Зареєструватися</button>
     </form>
+
 </div>
+<table id="userDataTable">
+    <thead>
+    <tr>
+        <th></th>
+        <th>Ім’я</th>
+        <th>Прізвище</th>
+        <th>По батькові</th>
+        <th>Гендер</th>
+        <th>Email</th>
+        <th>Телефон</th>
+        <th>Дата народження</th>
+        <th>Група</th>
+    </tr>
+    </thead>
+    <tbody>
+
+    </tbody>
+    <div class="button-container">
+    <button class="button" id="deleteRows" onclick="deleteSelectedRows()">Видалити вибрані</button>
+    <button class="button" id="duplicateRows" onclick="duplicateSelectedRows()">Дублювати вибрані</button>
+    </div>
+</table>
 <footer class="text-white text-center py-3 footer-custom">
     <div class="contact-links">
         <a href="tel:+123456789"><i class="fas fa-phone"></i>Зателефонувати</a>
@@ -82,8 +129,5 @@
         <a href="https://wa.me/studio"><i class="fab fa-whatsapp"></i> WhatsApp</a>
     </div>
 </footer>
-<script src="https://kit.fontawesome.com/e223accf0a.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
